# haste-standalone

./: .gitignore  README.md  haste-standalone.cabal
Haste/App/: Standalone.hs
Haste/App/Standalone/: Config.hs  Embed.hs  Server.hs
