name:                haste-standalone
version:             0.1.0.0
synopsis:            Create zero configuration standalone Haste.App web apps.
description:         This package lets you create Haste.App web applications
                     which don't rely on static configuration or the presence
                     of a web server. JavaScript and static files are served
                     by the server binary, which also provides the JavaScript
                     client with its configuration on launch.
                     Server host, port and other information is provided as
                     command line options, or autodetected by the library
                     when necessary.
homepage:            https://github.com/valderman/haste-standalone
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Haste.App.Standalone
  other-extensions:
    OverloadedStrings,
    CPP
  build-depends:
    base >=4.8 && <5
  if impl(haste)
    build-depends:
      haste-lib >= 0.5 && < 0.6
  else
    build-depends:
      haste-compiler >= 0.5 && <0.6,
      text           >=1.2  && <1.3,
      http-types     >=0.9  && <0.10,
      wai            >=3.2  && <3.3,
      warp           >=3.2  && <3.3,
      directory      >=1.2  && <1.3,
      filepath       >=1.4  && <1.5,
      network-info   >=0.2  && <0.3,
      bytestring     >=0.10 && <0.11,
      data-embed     >=0.1  && <0.2,
      temporary      >=1.2  && <1.3
    other-modules:
      Haste.App.Standalone.Server
      Haste.App.Standalone.Config
      Haste.App.Standalone.Embed
  default-language:
    Haskell2010
  ghc-options:
    -Wall
